--- a/css/layout.css
+++ b/css/layout.css
@@ -1,37 +1,40 @@
-
-#a, #b, #c, #d, #i{
+main{
   width: 480px;
 }
+
 #a {
   background-color: rgb(238, 207, 202);
   height: 75px;
   line-height: 75px;
+  width: 100%;
 }
 
 #b {
   background-color: rgb(239, 189, 182);
   height: 150px;
   line-height: 150px;
+  width: 100%;
 }
 
 #c {
   background-color: rgb(233, 141, 129);
+  height: 125px;
+  line-height: 125px;
+  width: 100%;
 }
 
 #d {
   background-color: rgb(223, 108, 92);
-}
-
-#c, #d {
   height: 125px;
   line-height: 125px;
+  width: 100%;
 }
 
 #e, #f, #g, #h {
   float: left;
   height: 250px;
   line-height: 250px;
-  width: 240px;
+  width: 50%
 }
 
 #e {
@@ -41,7 +44,7 @@
 #f {
   background-color: rgb(233, 68, 47);
 }
-#g{
+#g {
   background-color: rgb(235, 53, 29);
   clear: left;
 }
@@ -55,6 +58,7 @@
   clear: both;
   height: 80px;
   line-height: 80px;
+  width: 100%
 }
 
 
@@ -63,9 +67,10 @@
   background-color: rgb(235, 182, 182);
 }
 
-.center{
-  max-width: 960px;
+main{
   margin: auto;
+  margin-top: 50px;
+  width: 960px;
 }
 
 .block{
@@ -78,7 +83,7 @@
 #a {
   background-color: rgb(240, 231, 231);
   height: 100px;
-  width: 960px;
+  width: 100%;
   line-height: 100px;
 }
 
@@ -108,6 +113,7 @@
 
 #e {
   background-color: rgb(138, 133, 133);
+  float: none;
   height: 250px;
   line-height: 250px;
   width: 190px;
@@ -119,7 +125,7 @@
   line-height: 250px;
   width: 190px;
 }
-#g{
+#g {
   background-color: rgb(77, 74, 74);
   height: 250px;
   line-height: 250px;
